--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "K2Build/DFV_K2_BuildDeps"]
-	path = K2Build/DFV_K2_BuildDeps
-	url = git@rnd-github-usa-g.huawei.com:SeattleCloudBU/DFV_K2_BuildDeps.git
+[submodule "K2Build/dfv_k2_build_deps"]
+	path = K2Build/dfv_k2_build_deps
+	url = ssh://git@ssh-gitlab.futurewei.com:30022/k2/dfv_k2_build_deps.git
