k2 client: fixed issue with the seastar update; refactored client; added integration tests

--- a/test/client/CMakeLists.txt
+++ b/test/client/CMakeLists.txt
@@ -1,8 +1,12 @@
 link_directories (${CMAKE_BINARY_DIR}/src/common/)
 
 add_executable (client_test PartitionRangeTest.cpp)
+add_executable (executor1_test ExecutorThreadIntegTest.cpp)
+add_executable (executor2_test ExecutorLoopIntegTest.cpp)
 SET(CMAKE_CXX_FLAGS "-std=c++14 -march=native -mavx -mavx2 -mbmi2 -mlzcnt -Wno-deprecated-declarations -Wall -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -faligned-new")
 
-target_link_libraries (client_test PRIVATE k2client Seastar::seastar)
+target_link_libraries (client_test PRIVATE k2client)
+target_link_libraries (executor1_test PRIVATE k2client)
+target_link_libraries (executor2_test PRIVATE k2client)
 
 install (TARGETS client_test DESTINATION bin)
