--- a/src/client/lib/CMakeLists.txt
+++ b/src/client/lib/CMakeLists.txt
@@ -13,7 +13,7 @@ set_target_properties(k2client PROPERTIES
 	SOVERSION 1
 )
 
-target_link_libraries (k2client PRIVATE k2transport k2common Seastar::seastar )
+target_link_libraries (k2client PRIVATE k2transport k2common k2config Seastar::seastar)
 
 install(TARGETS k2client DESTINATION lib)
 install(FILES ${HEADERS} DESTINATION include/client)
