--- a/src/cmd/CMakeLists.txt
+++ b/src/cmd/CMakeLists.txt
@@ -5,3 +5,5 @@
 add_subdirectory(demo)
 add_subdirectory(k2b)
 add_subdirectory(nodepool)
+add_subdirectory(dataPlaneClient)
+add_subdirectory(controlPlaneClient)
