--- a/test/plogmock/CMakeLists.txt
+++ b/test/plogmock/CMakeLists.txt
@@ -1,10 +1,6 @@
-
-
-link_directories (${CMAKE_BINARY_DIR}/src/common/)
-
+#<!--
+#    (C)opyright Futurewei Technologies Inc, 2019
+#-->
 add_executable (plogmock_test Main.cpp PlogMockTest.cpp)
-SET(CMAKE_CXX_FLAGS "-std=c++17")
 
 target_link_libraries (plogmock_test PRIVATE seastar_testing boost_unit_test_framework k2plog stdc++fs k2common Seastar::seastar)
-
-install (TARGETS plogmock_test DESTINATION bin)
