Cleanup/refactoring and initial ssitxn module blank

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,7 @@ cmake_minimum_required (VERSION 3.13)
 
 project (k2_platform VERSION 0.0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
-add_compile_options(-O3 -g -Werror -Wall -Wextra)
-
-# cmake modules
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+add_compile_options(-O3 -g -Werror -Wall -Wextra -march=skylake -mtune=skylake-avx512 -mavx -mavx2 -mxsave -mbmi -mbmi2 -mlzcnt -maes -mpopcnt)
 
 if(DEFINED ENV{K2_DEBUG_LOGGING})
 	set(K2_DEBUG_LOGGING $ENV{K2_DEBUG_LOGGING})
@@ -20,9 +17,6 @@ endif()
 add_compile_definitions(K2_DEBUG_LOGGING=${K2_DEBUG_LOGGING})
 
 include_directories(src)
-include_directories(src/include)
-include_directories(test/include)
-include_directories(${CMAKE_CURRENT_BINARY_DIR}/src) # benchmarker protobuf
 
 find_package (Seastar REQUIRED)
 find_package (yaml-cpp REQUIRED) # required for configuration file parsing
