--- a/test/client/CMakeLists.txt
+++ b/test/client/CMakeLists.txt
@@ -1,12 +1,20 @@
 link_directories (${CMAKE_BINARY_DIR}/src/common/)
 
-add_executable (client_test PartitionRangeTest.cpp)
-add_executable (executor1_test ExecutorThreadIntegTest.cpp)
-add_executable (executor2_test ExecutorLoopIntegTest.cpp)
+add_executable (partitionmap_test PartitionRangeTest.cpp)
+add_executable (executor1_test ExecutorThreadPoolIntegTest.cpp)
+add_executable (executor2_test ExecutorEventLoopIntegTest.cpp)
+add_executable (client1_test ClientThreadPoolIntegTest.cpp)
+add_executable (client2_test ClientEventLoopIntegTest.cpp)
 SET(CMAKE_CXX_FLAGS "-std=c++14 -march=native -mavx -mavx2 -mbmi2 -mlzcnt -Wno-deprecated-declarations -Wall -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -faligned-new")
 
-target_link_libraries (client_test PRIVATE k2client)
+target_link_libraries (partitionmap_test PRIVATE k2client)
 target_link_libraries (executor1_test PRIVATE k2client)
 target_link_libraries (executor2_test PRIVATE k2client)
+target_link_libraries (client1_test PRIVATE k2client)
+target_link_libraries (client2_test PRIVATE k2client)
 
-install (TARGETS client_test DESTINATION bin)
+install (TARGETS partitionmap_test DESTINATION bin)
+install (TARGETS executor1_test DESTINATION bin)
+install (TARGETS executor2_test DESTINATION bin)
+install (TARGETS client1_test DESTINATION bin)
+install (TARGETS client2_test DESTINATION bin)
