move code into cpp files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,3 +10,5 @@ add_subdirectory (config)
 add_subdirectory (cmd)
 add_subdirectory (transport)
 add_subdirectory (benchmarker)
+add_subdirectory (indexer)
+add_subdirectory (persistence)
