--- a/src/cmd/nodepool/CMakeLists.txt
+++ b/src/cmd/nodepool/CMakeLists.txt
@@ -5,5 +5,5 @@ file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
 add_executable (node_pool ${HEADERS} ${SOURCES})
-target_link_libraries (node_pool PRIVATE k2transport k2node k2common Seastar::seastar)
+target_link_libraries (node_pool PRIVATE k2transport k2node k2common k2indexer k2memkv_module_server Seastar::seastar)
 install (TARGETS node_pool DESTINATION bin)
