move code into cpp files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,3 +11,5 @@ add_subdirectory (config)
 add_subdirectory (cmd)
 add_subdirectory (transport)
 add_subdirectory (benchmarker)
+add_subdirectory (indexer)
+add_subdirectory (persistence)
