Add tso skeleton

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory (transport)
 add_subdirectory (benchmarker)
 add_subdirectory (indexer)
 add_subdirectory (persistence)
+add_subdirectory (tso)
