--- a/src/k2/appbase/CMakeLists.txt
+++ b/src/k2/appbase/CMakeLists.txt
@@ -12,7 +12,7 @@ set_target_properties(k2appbase PROPERTIES
 	SOVERSION 1
 )
 
-target_link_libraries (k2appbase PRIVATE k2common k2transport Seastar::seastar )
+target_link_libraries (k2appbase PRIVATE k2config k2common k2transport Seastar::seastar )
 
 install(TARGETS k2appbase DESTINATION lib/k2)
 install(FILES ${HEADERS} DESTINATION include/k2/appbase)
