--- a/src/k2/tso/CMakeLists.txt
+++ b/src/k2/tso/CMakeLists.txt
@@ -6,6 +6,6 @@ add_subdirectory (service)
 
 add_executable (tso_main tso_main.cpp)
 
-target_link_libraries (tso_main PRIVATE k2transport k2common k2transport Seastar::seastar k2tso_service)
+target_link_libraries (tso_main PRIVATE k2appbase k2common k2transport Seastar::seastar k2tso_service)
 
 install (TARGETS tso_main DESTINATION bin)
