activity->applet rename

--- a/src/k2/CMakeLists.txt
+++ b/src/k2/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory (executor)
 add_subdirectory (indexer)
 add_subdirectory (modules)
 add_subdirectory (node)
+add_subdirectory (partitions)
 add_subdirectory (persistence)
 add_subdirectory (transport)
 add_subdirectory (tso)
