Simplify Payload* interface

--- a/test/plogmock/CMakeLists.txt
+++ b/test/plogmock/CMakeLists.txt
@@ -3,4 +3,4 @@
 #-->
 add_executable (plogmock_test Main.cpp PlogMockTest.cpp)
 
-target_link_libraries (plogmock_test PRIVATE seastar_testing boost_unit_test_framework k2plog stdc++fs k2common Seastar::seastar)
+target_link_libraries (plogmock_test PRIVATE seastar_testing boost_unit_test_framework k2plog k2transport stdc++fs k2common Seastar::seastar)
