rename old nodepool to deprecate

--- a/src/k2/cmd/CMakeLists.txt
+++ b/src/k2/cmd/CMakeLists.txt
@@ -4,6 +4,6 @@
 
 add_subdirectory(demo)
 add_subdirectory(k2b)
-add_subdirectory(nodepool)
+add_subdirectory(nodepool_deprecated)
 add_subdirectory(dataPlaneClient)
 add_subdirectory(controlPlaneClient)
