--- a/src/k2/CMakeLists.txt
+++ b/src/k2/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory (client)
 add_subdirectory (cmd)
 add_subdirectory (common)
 add_subdirectory (config)
+add_subdirectory (cpo)
 add_subdirectory (executor)
 add_subdirectory (indexer)
 add_subdirectory (k2types)
