Bootstrap nodepool and main component applets

--- a/src/k2/cmd/nodepool/CMakeLists.txt
+++ b/src/k2/cmd/nodepool/CMakeLists.txt
@@ -4,6 +4,6 @@
 
 add_executable (nodepool nodepool_main.cpp)
 
-target_link_libraries (nodepool PRIVATE k2appbase k2common k2transport Seastar::seastar)
+target_link_libraries (nodepool PRIVATE k2appbase k2common k2transport Seastar::seastar k2assignment_manager k2partition_manager k2node_pool_monitor k2collection_metadata_cache)
 
 install (TARGETS nodepool DESTINATION bin)
