--- a/src/k2/CMakeLists.txt
+++ b/src/k2/CMakeLists.txt
@@ -3,17 +3,22 @@
 #-->
 
 add_subdirectory (appbase)
+add_subdirectory (assignmentManager)
 add_subdirectory (benchmarker)
 add_subdirectory (client)
 add_subdirectory (cmd)
+add_subdirectory (collectionMetadataCache)
 add_subdirectory (common)
 add_subdirectory (config)
 add_subdirectory (cpo)
+add_subdirectory (dto)
 add_subdirectory (executor)
 add_subdirectory (indexer)
 add_subdirectory (k2types)
 add_subdirectory (modules)
 add_subdirectory (node)
+add_subdirectory (nodePoolMonitor)
+add_subdirectory (partitionManager)
 add_subdirectory (persistence)
 add_subdirectory (transport)
 add_subdirectory (tso)
