--- a/src/k2/cmd/controlPlaneOracle/CMakeLists.txt
+++ b/src/k2/cmd/controlPlaneOracle/CMakeLists.txt
@@ -2,8 +2,8 @@
 #    (C)opyright Futurewei Technologies Inc, 2019
 #-->
 
-add_executable (cpo cpo_main.cpp)
+add_executable (cpo_main cpo_main.cpp)
 
-target_link_libraries (cpo PRIVATE k2appbase k2common k2transport Seastar::seastar k2cpo_service)
+target_link_libraries (cpo_main PRIVATE k2appbase k2common k2transport Seastar::seastar k2cpo_service)
 
-install (TARGETS cpo DESTINATION bin)
+install (TARGETS cpo_main DESTINATION bin)
