--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@
 #-->
 include_directories(include)
 add_subdirectory (node)
+add_subdirectory (cpo)
 add_subdirectory (client)
 add_subdirectory (config)
 add_subdirectory (plogmock)
