--- a/src/k2/transport/CMakeLists.txt
+++ b/src/k2/transport/CMakeLists.txt
@@ -12,7 +12,7 @@ set_target_properties(k2transport PROPERTIES
 	SOVERSION 1
 )
 
-target_link_libraries (k2transport PRIVATE k2common Seastar::seastar )
+target_link_libraries (k2transport PRIVATE k2common k2config Seastar::seastar  crc32c)
 
 install(TARGETS k2transport DESTINATION lib/k2)
 install(FILES ${HEADERS} DESTINATION include/k2/transport)
