--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory (client)
 add_subdirectory (config)
 add_subdirectory (plogmock)
 add_subdirectory (persistentVolume)
+add_subdirectory (transport)
