--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ project (k2_platform VERSION 0.0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 add_compile_options(-O3 -g -Werror -Wall -Wextra -march=skylake -mtune=skylake-avx512 -mavx -mavx2 -mxsave -mbmi -mbmi2 -mlzcnt -maes -mpopcnt)
 
+# K2_DEBUG_LOGGING enables some verbose logging for debug purposes.
 if(DEFINED ENV{K2_DEBUG_LOGGING})
 	set(K2_DEBUG_LOGGING $ENV{K2_DEBUG_LOGGING})
 else()
