TPC-C first commit

--- a/src/k2/cmd/CMakeLists.txt
+++ b/src/k2/cmd/CMakeLists.txt
@@ -3,6 +3,7 @@
 #-->
 
 add_subdirectory(demo)
+add_subdirectory(tpcc)
 add_subdirectory(controlPlaneOracle)
 add_subdirectory(nodepool)
 add_subdirectory(txbench)
