--- a/src/k2/tso/service/CMakeLists.txt
+++ b/src/k2/tso/service/CMakeLists.txt
@@ -5,14 +5,10 @@
 file(GLOB HEADERS "*.h")
 file(GLOB SOURCES "*.cpp")
 
-add_library(k2tso_service STATIC ${HEADERS} ${SOURCES})
+add_executable (tso_main ${HEADERS} ${SOURCES})
 
-set_target_properties(k2tso_service PROPERTIES
-	VERSION ${PROJECT_VERSION}
-	SOVERSION 1
-)
+target_link_libraries (tso_main PRIVATE k2appbase k2common k2transport Seastar::seastar)
 
-target_link_libraries (k2tso_service PRIVATE k2common k2transport Seastar::seastar )
+install (TARGETS tso_main DESTINATION bin)
 
-install(TARGETS k2tso_service DESTINATION lib/k2)
-install(FILES ${HEADERS} DESTINATION include/k2/tso)
+
