--- a/src/k2/CMakeLists.txt
+++ b/src/k2/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory (config)
 add_subdirectory (cpo)
 add_subdirectory (dto)
 add_subdirectory (indexer)
+add_subdirectory (module)
 add_subdirectory (nodePoolMonitor)
 add_subdirectory (partitionManager)
 add_subdirectory (persistence)
