--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory (cpo)
 add_subdirectory (plogmock)
 add_subdirectory (persistentVolume)
 add_subdirectory (transport)
+add_subdirectory (k23si)
