Cluster run script: IPs->hostnames, run and stop commands

--- a/cluster/configs/tpcc_common.cfg
+++ b/cluster/configs/tpcc_common.cfg
@@ -1,8 +1,8 @@
 [deployment]
-docker_args = --privileged --network=host -v "/dev/:/dev" -v "/sys/:/sys/" -w /usr/local/bin/ --rm -e RDMAV_HUGEPAGES_SAFE=1
+docker_args = --privileged --network=host -v "/dev/:/dev" -v "/sys/:/sys/" -w /usr/local/bin/ -d --rm -e RDMAV_HUGEPAGES_SAFE=1
 
 [program_args]
-hugepages = true
+hugepages=
 rdma = mlx5_0
 cpuset = $cpus_expand
 smp = $cpus
