--- a/cluster/configs/tpcc_cluster.cfg
+++ b/cluster/configs/tpcc_cluster.cfg
@@ -1,4 +1,9 @@
 [server]
-ips = 10.218.233.42
+hosts = k2-bvu-20002.rnd.huawei.com
 cpus = 1
 configs = configs/mock_server.cfg configs/tpcc_common.cfg
+
+[client]
+hosts = k2-bvu-20003.rnd.huawei.com
+cpus = 1
+configs = configs/tpcc_client.cfg configs/tpcc_common.cfg
