--- a/cluster/configs/tpcc_client.cfg
+++ b/cluster/configs/tpcc_client.cfg
@@ -3,5 +3,6 @@ image = k2-bvu-10001.huawei.com/tpcc:latest
 binary = ./tpcc_client
 
 [program_args]
-test_duration_s = 45
+test_duration_s = 30
 tcp_remotes = tcp+k2rpc://192.168.1.4:10000
+memory = 10G
