Add TPC-C image to Makefile

--- a/K2Build/Makefile
+++ b/K2Build/Makefile
@@ -59,3 +59,11 @@ builder_img_build:
 
 builder_img_push:
 	@$(MAKE) -C Builder -s push
+
+tpcc_img_build:
+	@cp ../build/src/k2/cmd/tpcc/tpcc_client TPCC/
+	@cp ../build/src/k2/cmd/tpcc/mock/mock_server TPCC/
+	@$(MAKE) -C TPCC
+
+tpcc_img_push:
+	@$(MAKE) -C TPCC -s push
