Add dto::TxnPriority to mock client Change TPC-C runner image makefile so that it doesn't require copying binaries outside of build directory, and allow the image name to be changed with makefile variable

--- a/K2Build/Makefile
+++ b/K2Build/Makefile
@@ -59,3 +59,9 @@ builder_img_build:
 
 builder_img_push:
 	@$(MAKE) -C Builder -s push
+
+tpcc_img_build:
+	@cd ../ && $(MAKE) -f K2Build/TPCC/Makefile
+
+tpcc_img_push:
+	@cd ../ && $(MAKE) -f K2Build/TPCC/Makefile -s push
