Integrate CPOClient with TPC-C. Compiles but not tested yet

--- a/src/k2/cmd/tpcc/CMakeLists.txt
+++ b/src/k2/cmd/tpcc/CMakeLists.txt
@@ -6,6 +6,6 @@ add_subdirectory (mock)
 
 add_executable (tpcc_client tpcc_client.cpp)
 
-target_link_libraries (tpcc_client PRIVATE k2appbase k2transport k2common Seastar::seastar)
+target_link_libraries (tpcc_client PRIVATE k2appbase k2transport k2common k2cpo_service Seastar::seastar)
 
 install (TARGETS tpcc_client DESTINATION bin)
