Address review comments. Add CPO to TPC-C runner image and script

--- a/cluster/configs/tpcc_cluster.cfg
+++ b/cluster/configs/tpcc_cluster.cfg
@@ -7,3 +7,8 @@ configs = configs/mock_server.cfg configs/tpcc_common.cfg
 hosts = k2-bvu-20003.rnd.huawei.com
 cpus = 1
 configs = configs/tpcc_client.cfg configs/tpcc_common.cfg
+
+[cpo]
+hosts = k2-bvu-20004.rnd.huawei.com
+cpus = 1
+configs = configs/cpo.cfg configs/tpcc_common.cfg
