--- a/cluster/configs/tpcc_client.cfg
+++ b/cluster/configs/tpcc_client.cfg
@@ -7,3 +7,4 @@ test_duration_s = 30
 tcp_remotes = tcp+k2rpc://192.168.1.4:10000
 cpo = tcp+k2rpc://192.168.1.8:7000
 memory = 10G
+partition_request_timeout = 1s
