CPOClient with TPC-C integration Fix 0 byte SerializeAsPayload<Payload> deserialization. Fix TPC-C bug.

--- a/cluster/configs/tpcc_client.cfg
+++ b/cluster/configs/tpcc_client.cfg
@@ -5,4 +5,6 @@ binary = ./tpcc_client
 [program_args]
 test_duration_s = 30
 tcp_remotes = tcp+k2rpc://192.168.1.4:10000
+cpo = tcp+k2rpc://192.168.1.8:7000
 memory = 10G
+partition_request_timeout = 1s
