Add persistence service

--- a/src/k2/persistence/CMakeLists.txt
+++ b/src/k2/persistence/CMakeLists.txt
@@ -1,7 +1,3 @@
 add_subdirectory (plog)
-
-file(GLOB HEADERS "*.h")
-file(GLOB SOURCES "*.cpp")
-
-add_library(k2persistence STATIC ${HEADERS} ${SOURCES})
-target_link_libraries (k2persistence PRIVATE k2common k2plog)
+add_subdirectory (persistentVolume)
+add_subdirectory (service)
