--- a/src/k2/cmd/CMakeLists.txt
+++ b/src/k2/cmd/CMakeLists.txt
@@ -6,4 +6,5 @@ add_subdirectory(demo)
 add_subdirectory(tpcc)
 add_subdirectory(controlPlaneOracle)
 add_subdirectory(nodepool)
+add_subdirectory(persistence)
 add_subdirectory(txbench)
