--- a/cluster/configs/tpcc_cluster.cfg
+++ b/cluster/configs/tpcc_cluster.cfg
@@ -5,8 +5,13 @@ configs = configs/mock_server.cfg configs/tpcc_common.cfg
 
 [client]
 hosts = k2-bvu-20003.rnd.huawei.com
-cpus = 1
+cpus = 2
 configs = configs/tpcc_client.cfg configs/tpcc_common.cfg
+
+[load]
+hosts = k2-bvu-20003.rnd.huawei.com
+cpus = 2
+configs = configs/tpcc_load.cfg configs/tpcc_common.cfg
 
 [cpo]
 hosts = k2-bvu-20004.rnd.huawei.com
