--- a/cluster/configs/tpcc_load.cfg
+++ b/cluster/configs/tpcc_load.cfg
@@ -8,5 +8,5 @@ tcp_remotes = tcp+k2rpc://192.168.1.4:10000
 cpo = tcp+k2rpc://192.168.1.8:7000
 memory = 10G
 partition_request_timeout = 1s
-data_load = false
+data_load = true
 num_warehouses = 2
