Support concurrent TPC-C connections per core Prepare cluster runner script for TSO

--- a/cluster/configs/tpcc_client.cfg
+++ b/cluster/configs/tpcc_client.cfg
@@ -6,7 +6,9 @@ binary = ./tpcc_client
 test_duration_s = 30
 tcp_remotes = tcp+k2rpc://192.168.1.4:10000
 cpo = auto-rrdma+k2rpc://192.168.1.8:7000
+tso_endpoint = auto-rrdma+k2rpc://192.168.1.10:8000
 memory = 10G
 partition_request_timeout = 1s
 data_load = false
 num_warehouses = 2
+clients_per_core = 2
