--- a/cluster/configs/tpcc_cluster.cfg
+++ b/cluster/configs/tpcc_cluster.cfg
@@ -5,7 +5,7 @@ configs = configs/mock_server.cfg configs/tpcc_common.cfg
 
 [client]
 hosts = k2-bvu-20003.rnd.huawei.com
-cpus = 2
+cpus = 1
 configs = configs/tpcc_client.cfg configs/tpcc_common.cfg
 
 [load]
@@ -17,3 +17,8 @@ configs = configs/tpcc_load.cfg configs/tpcc_common.cfg
 hosts = k2-bvu-20004.rnd.huawei.com
 cpus = 1
 configs = configs/cpo.cfg configs/tpcc_common.cfg
+
+[tso]
+hosts = k2-bvu-20005.rnd.huawei.com
+cpus = 10
+configs = configs/tso.cfg configs/tpcc_common.cfg
