--- a/cluster/configs/tpcc_load.cfg
+++ b/cluster/configs/tpcc_load.cfg
@@ -6,6 +6,7 @@ binary = ./tpcc_client
 test_duration_s = 30
 tcp_remotes = tcp+k2rpc://192.168.1.4:10000
 cpo = auto-rrdma+k2rpc://192.168.1.8:7000
+tso_endpoint = auto-rrdma+k2rpc://192.168.1.10:8000
 memory = 10G
 partition_request_timeout = 1s
 data_load = true
