--- a/src/k2/tso/client_lib/CMakeLists.txt
+++ b/src/k2/tso/client_lib/CMakeLists.txt
@@ -12,7 +12,7 @@ set_target_properties(tso_clientlib PROPERTIES
 	SOVERSION 1
 )
 
-target_link_libraries (tso_clientlib PRIVATE k2appbase k2config k2common k2transport Seastar::seastar)
+target_link_libraries (tso_clientlib PRIVATE k2appbase k2dto k2config k2common k2transport Seastar::seastar)
 
 install(TARGETS tso_clientlib DESTINATION lib/k2)
 install(FILES ${HEADERS} DESTINATION include/k2/tso)
