--- a/src/k2/tso/service/CMakeLists.txt
+++ b/src/k2/tso/service/CMakeLists.txt
@@ -9,10 +9,9 @@ add_library (tso_service STATIC ${HEADERS} ${SOURCES})
 
 set_target_properties(tso_service PROPERTIES
 	VERSION ${PROJECT_VERSION}
-	SOVERSION 1
-)
+	SOVERSION 1)
 
-target_link_libraries (tso_service PRIVATE k2appbase k2common k2transport Seastar::seastar)
+target_link_libraries (tso_service PRIVATE k2appbase k2common k2dto k2transport Seastar::seastar)
 
 install(TARGETS tso_service DESTINATION lib/k2)
 install(FILES ${HEADERS} DESTINATION include/k2/tso)
