Add cmd/tso to CMakeLists

--- a/src/k2/cmd/CMakeLists.txt
+++ b/src/k2/cmd/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(controlPlaneOracle)
 add_subdirectory(nodepool)
 add_subdirectory(persistence)
 add_subdirectory(txbench)
+add_subdirectory(tso)
