--- a/cluster/configs/tso.cfg
+++ b/cluster/configs/tso.cfg
@@ -1,8 +1,7 @@
 [deployment]
 image = k2-bvu-10001.huawei.com/tpcc:latest
-binary = ./tso_main
+binary = ./tso
 
 [program_args]
 tcp_endpoints = 8000
-data_dir = ./
 memory = 10G
