--- a/cluster/configs/tpcc_cluster.cfg
+++ b/cluster/configs/tpcc_cluster.cfg
@@ -3,6 +3,11 @@ hosts = k2-bvu-20002.rnd.huawei.com
 cpus = 1
 configs = configs/mock_server.cfg configs/tpcc_common.cfg
 
+[k2node]
+hosts = k2-bvu-20002.rnd.huawei.com
+cpus = 1
+configs = configs/k2_server.cfg configs/tpcc_common.cfg
+
 [client]
 hosts = k2-bvu-20003.rnd.huawei.com
 cpus = 1
@@ -20,5 +25,5 @@ configs = configs/cpo.cfg configs/tpcc_common.cfg
 
 [tso]
 hosts = k2-bvu-20005.rnd.huawei.com
-cpus = 10
+cpus = 2
 configs = configs/tso.cfg configs/tpcc_common.cfg
