Various client fixes, add persistence to cluster configs

--- a/cluster/configs/cpo.cfg
+++ b/cluster/configs/cpo.cfg
@@ -6,3 +6,6 @@ binary = ./cpo_main
 tcp_endpoints = 7000
 data_dir = ./
 memory = 1G
+cpuset = 1
+heartbeat_deadline = 600s
+assignment_timeout = 10s
