--- a/cluster/configs/tpcc_cluster.cfg
+++ b/cluster/configs/tpcc_cluster.cfg
@@ -15,7 +15,7 @@ configs = configs/tpcc_client.cfg configs/tpcc_common.cfg
 
 [load]
 hosts = k2-bvu-20003.rnd.huawei.com
-cpus = 2
+cpus = 1
 configs = configs/tpcc_load.cfg configs/tpcc_common.cfg
 
 [cpo]
@@ -24,6 +24,11 @@ cpus = 1
 configs = configs/cpo.cfg configs/tpcc_common.cfg
 
 [tso]
-hosts = k2-bvu-20005.rnd.huawei.com
+hosts = k2-bvu-20004.rnd.huawei.com
 cpus = 2
 configs = configs/tso.cfg configs/tpcc_common.cfg
+
+[persist]
+hosts = k2-bvu-20005.rnd.huawei.com
+cpus = 1
+configs = configs/persist.cfg configs/tpcc_common.cfg
