--- a/cluster/configs/tso.cfg
+++ b/cluster/configs/tso.cfg
@@ -3,5 +3,5 @@ image = k2-bvu-10001.huawei.com/tpcc:latest
 binary = ./tso
 
 [program_args]
-tcp_endpoints = 8000
+tcp_endpoints = tcp+k2rpc://192.168.1.8:8000 tcp+k2rpc://192.168.1.8:8001
 memory = 10G
