--- a/K2Build/TPCC/Dockerfile
+++ b/K2Build/TPCC/Dockerfile
@@ -5,6 +5,7 @@ RUN proxy apt update && proxy apt install -y libboost-thread-dev libboost-system
 RUN proxy apt update && proxy apt install -y libcrypto++6 libprotobuf10 libyaml-cpp0.5v5 libnuma1 libhwloc5
 RUN proxy apt update && proxy apt-get install -t unstable -y libibverbs-dev=22.1-1
 COPY build/src/k2/cmd/tpcc/mock/mock_server /usr/local/bin/
+COPY build/src/k2/cmd/persistence/persistence /usr/local/bin/
 COPY build/src/k2/cmd/tpcc/tpcc_client /usr/local/bin/
 COPY build/src/k2/cmd/controlPlaneOracle/cpo_main /usr/local/bin/
 COPY build/src/k2/cmd/tso/tso /usr/local/bin/
