TSO Client integration, various client-side fixes, cluster configs for TSO, K2 server, and persistence.

--- a/cluster/configs/tpcc_cluster.cfg
+++ b/cluster/configs/tpcc_cluster.cfg
@@ -3,6 +3,11 @@ hosts = k2-bvu-20002.rnd.huawei.com
 cpus = 1
 configs = configs/mock_server.cfg configs/tpcc_common.cfg
 
+[k2node]
+hosts = k2-bvu-20002.rnd.huawei.com
+cpus = 1
+configs = configs/k2_server.cfg configs/tpcc_common.cfg
+
 [client]
 hosts = k2-bvu-20003.rnd.huawei.com
 cpus = 1
@@ -10,7 +15,7 @@ configs = configs/tpcc_client.cfg configs/tpcc_common.cfg
 
 [load]
 hosts = k2-bvu-20003.rnd.huawei.com
-cpus = 2
+cpus = 1
 configs = configs/tpcc_load.cfg configs/tpcc_common.cfg
 
 [cpo]
@@ -19,6 +24,11 @@ cpus = 1
 configs = configs/cpo.cfg configs/tpcc_common.cfg
 
 [tso]
-hosts = k2-bvu-20005.rnd.huawei.com
-cpus = 10
+hosts = k2-bvu-20004.rnd.huawei.com
+cpus = 2
 configs = configs/tso.cfg configs/tpcc_common.cfg
+
+[persist]
+hosts = k2-bvu-20005.rnd.huawei.com
+cpus = 1
+configs = configs/persist.cfg configs/tpcc_common.cfg
